add ModuleManager
git-svn-id: file:///home/coren/project/backup_ho/trunk@1400 b8de521a-fa13-0410-8113-fc7ffabbd59a